[package]
name = "ims"
version = "0.1.0"
authors = ["Sean.W <imseean@gmail.com>"]

[dependencies]
clap = "2.29.2"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.5", features = ["serde","v4"] }
regex = "0.2.5"
prettytable-rs = "0.6.7"
handlebars = "0.30.0"
libloading = "0.5.0"
log = "0.4"
colored = "1.6"
iron = "0.6.0"
staticfile = "0.5.0"
mount = "0.4.0"
pulldown-cmark = "0.1.2"