[package]
name = "ims"
version = "0.1.0"
authors = ["Sean.W <imseean@gmail.com>"]

[dependencies]
clap = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
chrono = { version = "*", features = ["serde"] }
uuid = { version = "*", features = ["serde","v4"] }
regex = "*"
prettytable-rs = "*"
handlebars = "0.30.1"
libloading = "*"
log = "*"
simplelog = "*"
colored = "*"
iron = "*"
staticfile = "*"
mount = "*"
pulldown-cmark = "0.1.2"
cursive = "*"